<resources>
    <string name="app_name">Five Meals</string>

    <!--LoginPage Strings -->
    <string name="login_username_text">Username</string>
    <string name="login_password_text">Password</string>
    <string name="login_button_Signin_text">Sign In</string>
    <string name="login_SignUP_Text">Don\'t have an Account? Sign Up</string>
    <string name="login_forgot_Password_Text">Forgot Password?</string>

    <!--SignUp Page Strings -->

    <string name="Sign_up_Name_Text">Name</string>
    <string name="Sign_up_Password_Text">Password</string>
    <string name="Sign_up_Email_Text">Email</string>
    <string name="Sign_up_Button_SignUp_Text">Sign Up</string>
    <string name="Sign_up_AlreadyHaveAnAccount_SignUp_Text">Already Have an Account? Sign In</string>

    <!--SignUp Page Strings -->

    <string-array name="Category_Menu">

        <item>BreakFast</item>
        <item>Lunch</item>
        <item>Dinner</item>
        <item>Meat</item>
        <item>Fish</item>
        <item>Snacks</item>
        <item>Drinks</item>

    </string-array>

    <!--Rest Password Page Strings -->
    <string name="ResetPasswordNextButton">Next</string>
    <string name="ResetPasswordPreviousButton">Previous</string>
</resources>